<resources>
    <string name="app_name">App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EMDB | Your reviews app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_series">Series</string>
    <string name="menu_account">Account</string>
    <string name="menu_contacts">Contacts</string>

    // Strings de ContactsActivity
    <string name="nav_contacts">Select an option:</string>
    <string name="btn_share">Share App!</string>
    <string name="nav_popup">Thanks for your preference!</string>
    <string name="content_popup">You can contact us through our digital platforms or via text message (keep in mind that the text message may be subject to shipping charges according to the telephone operator).</string>
    <string name="btn_sms_name">Message</string>
    <string name="btn_cancel">Cancel</string>
    // Strings de ContactMessage
    <string name="support_EMDB">EMDB Support</string>
    <string name="message_contact">Enter Message</string>
    <string name="btn_sendSMS">Send SMS</string>
    // Strings de ContactEmail
    <string name="subject_content">Subject</string>
    <string name="message_content">Message</string>
    <string name="send_email">Send Email</string>
    //Strings de Series
    <string name="series_status">Loading Series...</string>
    <string name="series_name">Name:</string>
    <string name="series_descp">Description:</string>

       // Strings de Movies
    <string name="loading_movies">Loading Movies...</string>
    <string name="title_activity_login">Login</string>

</resources>