<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movies"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_series"
            android:title="@string/menu_series" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contacts" />

    </group>
</menu>