<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_movies"
        android:name="com.example.app.ui.movies.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/nav_series"
        android:name="com.example.app.ui.series.SeriesFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_series" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.app.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.app.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

</navigation>